# rest-api-rust

./: Cargo.toml
src/: bin.rs
