[package]
name = "rest-api-rust"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "lib"
path = "src/lib.rs"

[[bin]]
name = "rest-api-rust"
path = "src/bin.rs"


[dependencies]
rocket = "0.4"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"

[dependencies.rocket_contrib]
version = "0.4"
default-features = false
features = ["json"]